force-app/main/default/objects/Quote/fields/billingSchedule__c.field-meta.xml
<CustomField>
    <fullName>billingSchedule__c</fullName>
    <label>billingSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>