force-app/main/default/objects/Quote/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Bundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>