force-app/main/default/objects/Quote/fields/Calc_Business_Miles__c.field-meta.xml
<CustomField>
    <fullName>Calc_Business_Miles__c</fullName>
    <label>Calc Business Miles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>