force-app/main/default/objects/Quote/fields/Calc_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Calc_Entity_Type__c</fullName>
    <label>Calc Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>