force-app/main/default/objects/Quote/fields/Calc_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_Filing_Status__c</fullName>
    <label>Calc Filing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>