force-app/main/default/objects/Quote/fields/Calc_Foreign_Owners__c.field-meta.xml
<CustomField>
    <fullName>Calc_Foreign_Owners__c</fullName>
    <label>Calc Foreign Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>