force-app/main/default/objects/Quote/fields/Calc_Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Calc_Industry_Type__c</fullName>
    <label>Calc Industry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>