force-app/main/default/objects/Quote/fields/Calc_Living_Abroad__c.field-meta.xml
<CustomField>
    <fullName>Calc_Living_Abroad__c</fullName>
    <label>Calc Living Abroad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>