force-app/main/default/objects/Quote/fields/Calc_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Calc_Number_of_Employees__c</fullName>
    <label>Calc Number of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>