force-app/main/default/objects/Quote/fields/Calc_Number_of_K1s__c.field-meta.xml
<CustomField>
    <fullName>Calc_Number_of_K1s__c</fullName>
    <label>Calc Number of K1s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>