force-app/main/default/objects/Quote/fields/Calc_Number_of_Owners__c.field-meta.xml
<CustomField>
    <fullName>Calc_Number_of_Owners__c</fullName>
    <label>Calc Number of Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>