force-app/main/default/objects/Quote/fields/Calc_Number_of_Rental_Properties__c.field-meta.xml
<CustomField>
    <fullName>Calc_Number_of_Rental_Properties__c</fullName>
    <label>Calc Number of Rental Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>