force-app/main/default/objects/Quote/fields/Calc_Office_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Calc_Office_Square_Footage__c</fullName>
    <label>Calc Office Square Footage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>