force-app/main/default/objects/Quote/fields/Calc_Personal_Income__c.field-meta.xml
<CustomField>
    <fullName>Calc_Personal_Income__c</fullName>
    <label>Calc Personal Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>