force-app/main/default/objects/Quote/fields/Calc_Projected_1st_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Calc_Projected_1st_Year_Revenue__c</fullName>
    <label>Calc Projected 1st Year Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>