force-app/main/default/objects/Quote/fields/Calc_Run_Payroll_Before__c.field-meta.xml
<CustomField>
    <fullName>Calc_Run_Payroll_Before__c</fullName>
    <label>Calc Run Payroll Before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>