force-app/main/default/objects/Quote/fields/Calc_Savings_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calc_Savings_Amount__c</fullName>
    <label>Calc Savings Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>