force-app/main/default/objects/Quote/fields/Calc_State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Calc_State_of_Incorporation__c</fullName>
    <label>Calc State of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>