force-app/main/default/objects/Quote/fields/Calc_State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Calc_State_of_Residence__c</fullName>
    <description>The state in which a client currently resides, which may be different from their billing state or state of incorporation</description>
    <label>Calc State of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>