force-app/main/default/objects/Quote/fields/Calc_Total_Investor_Funding__c.field-meta.xml
<CustomField>
    <fullName>Calc_Total_Investor_Funding__c</fullName>
    <label>Calc Total Investor Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>