force-app/main/default/objects/Quote/fields/Calc_Total_Startup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Calc_Total_Startup_Cost__c</fullName>
    <label>Calc Total Startup Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>