force-app/main/default/objects/Quote/fields/Calc_Website_Selling_Goods__c.field-meta.xml
<CustomField>
    <fullName>Calc_Website_Selling_Goods__c</fullName>
    <label>Calc Website Selling Goods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>