force-app/main/default/objects/Quote/fields/Calc_Worked_with_Accountant__c.field-meta.xml
<CustomField>
    <fullName>Calc_Worked_with_Accountant__c</fullName>
    <label>Calc Worked with Accountant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>