force-app/main/default/objects/Quote/fields/Calc_Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Calc_Years_in_Business__c</fullName>
    <description>The number of years the client has been in business</description>
    <label>Calc Years in Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>