force-app/main/default/objects/Quote/fields/Calculator__c.field-meta.xml
<CustomField>
    <fullName>Calculator__c</fullName>
    <formula>HYPERLINK(&quot;/apex/Pricing_Calc?O=&quot;+ OpportunityId+&quot;&amp;A=&quot;+ Opportunity.AccountId+&quot;&amp;Q=&quot;+ Id+&quot;&quot;, &quot;Update Quote&quot;, &quot;_self&quot; )</formula>
    <label>Calculator</label>
    <type>Text</type>
</CustomField>