force-app/main/default/objects/Quote/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <label>Payment URL</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>